# command_line_calculator

./: .gitignore  CMakeLists.txt
include/: operation.h  postfix.h  stack.h
src/: main.c  operation.c  postfix.c  stack.c
